// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a initial extent component with additional css classes 1`] = `
<div
  class="initial-extent testClass1 testClass2 css-0"
  data-theme="light"
>
  <button
    aria-label="description"
    class="chakra-button initial-extent-button css-8269ki"
    data-theme="light"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      focusable="false"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
      <polyline
        points="9 22 9 12 15 12 15 22"
      />
    </svg>
  </button>
</div>
`;

exports[`should successfully create a initial extent component with home button 1`] = `
<div
  class="initial-extent css-0"
  data-theme="light"
>
  <button
    aria-label="description"
    class="chakra-button initial-extent-button css-8269ki"
    data-theme="light"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      focusable="false"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
      <polyline
        points="9 22 9 12 15 12 15 22"
      />
    </svg>
  </button>
</div>
`;
